--- a/front/web/login.html
+++ b/front/web/login.html
@@ -26,5 +26,30 @@
             <a href="/register" class="button register-button">Inscrivez-vous ici</a>
         </form>
     </div>
+    <script>
+        function loginUser(event) {
+            event.preventDefault();
+            const formData = new FormData(document.getElementById('loginForm'));
+            fetch('http://localhost:8181/login', {
+                method: 'POST',
+                body: formData,
+            })
+            .then(response => {
+                console.log(response)
+                if (response.ok) {
+                    alert('Connexion réussie');
+                    console.log('url de la réponse :', response.url)
+                   window.location.href = response.url ; // Redirection vers le tableau de bord après connexion réussie
+                } else {
+                    response.text().then(text => {
+                        alert('Erreur lors de la connexion : ' + text);
+                    });
+                }
+            })
+            .catch(error => console.error('Erreur:', error));
+        }
+
+        document.getElementById('loginForm').addEventListener('submit', loginUser);
+    </script>
 </body>
 </html>
