--- a/front/web/register.html
+++ b/front/web/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/register.css">
+    <link rel="stylesheet" href="../static/register.css">
     <title>Inscription</title>
 </head>
 <body>
@@ -12,47 +12,23 @@
             <a href="#" class="back-button">&larr;</a>
             <h1>Inscription</h1>
         </div>
-        <form id="registerForm">
+        <form id="registerForm" action="/register" method="POST">
             <div class="form-group">
                 <label for="name">Nom:</label>
-                <input type="text" id="name" name="name" required>
+                <input type="text" id="name" name="name" placeholder="Nom" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" placeholder="Email" required>
             </div>
             <div class="form-group">
                 <label for="password">Mot de passe:</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" placeholder="Mot de passe" required>
             </div>
             <button type="submit" class="button">S'inscrire</button>
+            <div class="divider">ou</div>
+            <a href="/login" class="button login-button">Connectez-vous ici</a>
         </form>
     </div>
-
-    <script>
-        document.getElementById('registerForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const formData = {
-                username: document.getElementById('name').value,
-                password: document.getElementById('password').value
-            };
-
-            fetch('http://localhost:8080/register', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(formData)
-            })
-            .then(response => {
-                if (response.ok) {
-                    alert('Inscription réussie');
-                    window.location.href = "/"; // Redirection après succès
-                } else {
-                    response.json().then(data => {
-                        alert('Erreur lors de l\'inscription : ' + data.error);
-                    });
-                }
-            })
-            .catch(error => console.error('Erreur:', error));
-        });
-    </script>
 </body>
 </html>
