--- a/front/web/login.html
+++ b/front/web/login.html
@@ -32,14 +32,14 @@
             const formData = new FormData(document.getElementById('loginForm'));
             fetch('http://localhost:8181/login', {
                 method: 'POST',
-                body: formData,
+                body: formData
             })
             .then(response => {
                 console.log(response)
                 if (response.ok) {
                     alert('Connexion réussie');
                     console.log('url de la réponse :', response.url)
-                   window.location.href = response.url ; // Redirection vers le tableau de bord après connexion réussie
+                    window.location.href = response.url ; // Redirection vers le tableau de bord après connexion réussie
                 } else {
                     response.text().then(text => {
                         alert('Erreur lors de la connexion : ' + text);
