--- a/front/web/register.html
+++ b/front/web/register.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <a href="#" class="back-button">&larr;</a>
+            <a href="/login" class="back-button">&larr;</a>
             <h1>Inscription</h1>
         </div>
         <form id="registerForm" action="/register" method="POST">
@@ -23,12 +23,50 @@
             </div>
             <div class="form-group">
                 <label for="password">Mot de passe:</label>
-                <input type="password" id="password" name="password" placeholder="Mot de passe" required>
+                <!-- <input type="password" id="password" name="password" placeholder="Mot de passe" required> -->
+								<input type="password" id="password" name="password" placeholder="Mot de passe" required autocomplete="current-password">
             </div>
             <button type="submit" class="button">S'inscrire</button>
             <div class="divider">ou</div>
             <a href="/login" class="button login-button">Connectez-vous ici</a>
         </form>
     </div>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const registerForm = document.getElementById('registerForm');
+
+            registerForm.addEventListener('submit', async function (e) {
+                e.preventDefault();
+
+                const name = document.getElementById('name').value;
+                const email = document.getElementById('email').value;
+                const password = document.getElementById('password').value;
+
+                try {
+                    const response = await fetch('http://localhost:8181/register', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({
+                            username: name,
+                            email: email,
+                            password: password
+                        })
+                    });
+
+                    if (!response.ok) {
+                        const errorData = await response.json();
+                        throw new Error(errorData.error || 'Erreur lors de l\'inscription');
+                    }
+
+                    alert('Inscription réussie ! Redirection vers la page de connexion.');
+                    window.location.href = '/login'
+                } catch (error) {
+                    alert(error.message);
+                }
+            });
+        });
+    </script>
 </body>
 </html>
