--- a/front/web/register.html
+++ b/front/web/register.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -41,7 +41,7 @@
                 console.log(response)
                 if (response.ok) {
                     alert('Inscription réussie');
-                    window.location.href = "/"; // Redirection vers la page de connexion après inscription réussie
+                    window.location.href = "/login"; // Redirection vers la page de connexion après inscription réussie
                 } else {
                     response.text().then(text => {
                 alert('Erreur lors de l\'inscription : ' + text);
@@ -49,6 +49,67 @@
         }
             })
             .catch(error => console.error('Erreur:', error));
+        }
+
+        document.getElementById('registerForm').addEventListener('submit', registerUser);
+    </script>
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/register.css">
+    <title>Inscription</title>
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <a href="#" class="back-button">&larr;</a>
+            <h1>Inscription</h1>
+        </div>
+        <form id="registerForm" action="/users/create" method="POST"> <!-- Action corrigée -->
+            <div class="form-group">
+                <label for="name">Nom:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Mot de passe:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit" class="button">S'inscrire</button>
+        </form>
+    </div>
+
+    <script>
+        function registerUser(event) {
+            event.preventDefault();
+            const formData = new FormData(document.getElementById('registerForm'));
+            fetch('http://localhost:8181/users/create', { // Assurez-vous que l'URL correspond
+                method: 'POST',
+                body: formData
+            })
+            .then(response => {
+                if (response.ok) {
+                    alert('Inscription réussie');
+                    window.location.href = "/login"; // Redirection vers la page de connexion
+                } else {
+                    return response.text().then(text => {
+                        throw new Error(text);
+                    });
+                }
+            })
+            .catch(error => {
+                console.error('Erreur:', error);
+                alert('Erreur lors de l\'inscription : ' + error.message);
+            });
         }
 
         document.getElementById('registerForm').addEventListener('submit', registerUser);
