--- a/front/web/login.html
+++ b/front/web/login.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -9,10 +9,10 @@
 <body>
     <div class="container">
         <div class="header">
-            <a href="#" class="back-button">&larr;</a>
+            <a href="#" class="back-button">&larr; </a>
             <h1>Connexion</h1>
         </div>
-        <form id="loginForm" action="/login" method="POST">
+        <form id="loginForm">
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" placeholder="Email" required>
@@ -35,61 +35,6 @@
                 body: formData
             })
             .then(response => {
-                console.log(response)
-                if (response.ok) {
-                    return response.text();
-                    console.log('url de la réponse :', response.url)
-                    window.location.href = response.url ; // Redirection vers le tableau de bord après connexion réussie
-                } else {
-                    response.text().then(text => {
-                        alert('Erreur lors de la connexion : ' + text);
-                    });
-                }
-            })
-            .catch(error => console.error('Erreur:', error));
-        }
-
-        document.getElementById('loginForm').addEventListener('submit', loginUser);
-    </script>
-</body>
-</html> -->
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/login.css">
-    <title>Connexion</title>
-</head>
-<body>
-    <div class="container">
-        <div class="header">
-            <a href="#" class="back-button">&larr; </a>
-            <h1>Connexion</h1>
-        </div>
-        <form id="loginForm" action="/login" method="POST">
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Email" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Mot de passe:</label>
-                <input type="password" id="password" name="password" placeholder="Mot de passe" required>
-            </div>
-            <button type="submit" class="button" >Se connecter</button>
-            <div class="divider">ou</div>
-            <a href="/register" class="button register-button">Inscrivez-vous ici</a>
-        </form>
-    </div>
-    <script>
-        function loginUser(event) {
-            event.preventDefault();
-            const formData = new FormData(document.getElementById('loginForm'));
-            fetch('http://localhost:8181/login', {  // Assurez-vous que le port correspond
-                method: 'POST',
-                body: formData
-            })
-            .then(response => {
                 if (response.ok) {
                     return response.json();
                 } else {
@@ -99,18 +44,19 @@
                 }
             })
             .then(data => {
-                console.log('Données reçues:', data); // Journaliser les données de la réponse
-                console.log('redirectUrl', data.redirectUrl);
-                window.location.href = data.redirectUrl;
+                if (data.redirectUrl) {
+                    window.location.href = data.redirectUrl; // Redirection après connexion réussie
+                } else {
+                    throw new Error("URL de redirection non définie dans la réponse.");
+                }
             })
             .catch(error => {
                 console.error('Erreur:', error);
                 alert('Erreur lors de la connexion : ' + error.message);
             });
         }
-    
+
         document.getElementById('loginForm').addEventListener('submit', loginUser);
     </script>
-    
 </body>
 </html>
