--- a/front/web/login.html
+++ b/front/web/login.html
@@ -14,8 +14,8 @@
         </div>
         <form id="loginForm" action="/login" method="POST">
             <div class="form-group">
-                <label for="username">Nom d'utilisateur ou Email:</label>
-                <input type="text" id="username" name="username" placeholder="Nom d'utilisateur ou Email" required>
+                <label for="email">Email:</label>
+                <input type="text" id="email" name="email" placeholder="Nom d'utilisateur ou Email" required>
             </div>
             <div class="form-group">
                 <label for="password">Mot de passe:</label>
@@ -27,23 +27,38 @@
         </form>
     </div>
     <script>
-        document.getElementById('loginForm').addEventListener('submit', function(event) {
+        function loginUser(event) {
             event.preventDefault();
             const formData = new FormData(document.getElementById('loginForm'));
-            fetch('/login', {
+            fetch('http://localhost:8181/login', {
                 method: 'POST',
                 body: formData
             })
             .then(response => {
+                console.log(response);
                 if (response.ok) {
-                    alert('Connexion réussie');
-                    window.location.href = "/home"; // Redirection vers la page d'accueil après connexion réussie
+                    return response.json();
                 } else {
-                    alert('Nom d\'utilisateur ou Email ou mot de passe incorrect');
+
+                    return response.text().then(text => {
+                        throw new Error(text);
+                    });
                 }
             })
-            .catch(error => console.error('Erreur:', error));
-        });
+            .then(data => {
+                if (data.redirectUrl) {
+                    window.location.href = data.redirectUrl; // Redirection après connexion réussie
+                } else {
+                    throw new Error("URL de redirection non définie dans la réponse.");
+                }
+            })
+            .catch(error => {
+                console.error('Erreur:', error);
+                alert('Erreur lors de la connexion : ' + error.message);
+            });
+        }
+
+        document.getElementById('loginForm').addEventListener('submit', loginUser);
     </script>
 </body>
 </html>
