--- a/front/web/profile.html
+++ b/front/web/profile.html
@@ -34,10 +34,9 @@
     </div>
     <script>
         let user
-        // Assuming the URL is: https://example.com/?id=123&name=John
         const urlParams = new URLSearchParams(window.location.search);
         const id = urlParams.get('id');
-        console.log(id); // Outputs: 123
+        console.log(id);
         if (id != null) {
             fetch(`http://localhost:8181/getuserbyid?id=${id}`, {
                 method: 'GET',
@@ -72,6 +71,60 @@
             }
         });
     </script>
-</body>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const profileForm = document.getElementById('profileForm');
+            const deleteForm = document.getElementById('deleteForm');
 
+            profileForm.addEventListener('submit', function (event) {
+                event.preventDefault();
+
+                const id = document.querySelector('input[name="id"]').value;
+                const name = document.querySelector('input[name="name"]').value;
+                const email = document.querySelector('input[name="email"]').value;
+                const password = document.querySelector('input[name="password"]').value;
+
+                fetch('http://localhost:8181/profile/update', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ id, name, email, password }),
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        alert(data.message);
+                        // Rafraîchir la page ou faire d'autres actions si nécessaire
+                    })
+                    .catch(error => {
+                        console.error('Erreur:', error);
+                        alert('Une erreur est survenue lors de la mise à jour du profil');
+                    });
+            });
+
+            deleteForm.addEventListener('submit', function (event) {
+                event.preventDefault();
+
+                const id = document.querySelector('input[name="id"]').value;
+
+                fetch('http://localhost:8181/profile/delete', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ id }),
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        alert(data.message);
+                        // Rediriger ou faire d'autres actions après la suppression du compte
+                    })
+                    .catch(error => {
+                        console.error('Erreur:', error);
+                        alert('Une erreur est survenue lors de la suppression du compte');
+                    });
+            });
+        });
+    </script>
+</body>
 </html>
