--- a/front/web/profile.html
+++ b/front/web/profile.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="fr">
-
+ 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profil</title>
-    <link rel="stylesheet" href="../static/profile.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Profil</title>
+<link rel="stylesheet" href="../static/profile.css">
 </head>
-
+ 
 <body>
-    <div class="container">
-        <h1>Mon Profil</h1>
-        <form id="profileForm" action="/profile/update" method="post">
-            <input type="hidden" name="id" value="{{.ID}}">
-            <div class="profile-section">
-                <label for="name">Pseudo</label>
-                <input type="text" id="name" name="name" value="{{.Name}}">
-            </div>
-            <div class="profile-section">
-                <label for="email">Adresse mail</label>
-                <input type="email" id="email" name="email" value="{{.Email}}">
-            </div>
-            <div class="profile-section">
-                <label for="password">Mot de passe</label>
-                <input type="password" id="password" name="password" placeholder="Mot de passe">
-            </div>
-            <button type="submit" class="update-button">Valider</button>
-        </form>
-        <form id="deleteForm" action="/profile/delete" method="post">
-            <input type="hidden" name="id" value="{{.ID}}">
-            <button type="submit" class="delete-button">Supprimer mon compte</button>
-        </form>
-    </div>
-    <script>
+<div class="container">
+<h1>Mon Profil</h1>
+<form id="profileForm" action="/profile/update" method="post">
+<input type="hidden" name="id" value="{{.ID}}">
+<div class="profile-section">
+<label for="name">Pseudo</label>
+<input type="text" id="name" name="name" value="{{.Name}}">
+</div>
+<div class="profile-section">
+<label for="email">Adresse mail</label>
+<input type="email" id="email" name="email" value="{{.Email}}">
+</div>
+<div class="profile-section">
+<label for="password">Mot de passe</label>
+<input type="password" id="password" name="password" placeholder="Mot de passe">
+</div>
+<button type="submit" class="update-button">Valider</button>
+</form>
+<form id="deleteForm" action="/profile/delete" method="post">
+<input type="hidden" name="id" value="{{.ID}}">
+<button type="submit" class="delete-button">Supprimer mon compte</button>
+</form>-
+</div>
+<script>
         let user
         const urlParams = new URLSearchParams(window.location.search);
         const id = urlParams.get('id');
@@ -52,13 +52,13 @@
                 })
                 .catch(error => console.error('Erreur:', error));
         }
-
+ 
     </script>
-    <script>
+<script>
         document.addEventListener("DOMContentLoaded", function () {
             const urlParams = new URLSearchParams(window.location.search);
             const userId = urlParams.get('id');
-
+ 
             if (userId) {
                 fetch(`/profile?id=${userId}`)
                     .then(response => response.json())
@@ -70,20 +70,20 @@
                     .catch(error => console.error('Erreur:', error));
             }
         });
-    </script>
-    <script>
+</script>
+<script>
         document.addEventListener("DOMContentLoaded", function () {
             const profileForm = document.getElementById('profileForm');
             const deleteForm = document.getElementById('deleteForm');
-
+ 
             profileForm.addEventListener('submit', function (event) {
                 event.preventDefault();
-
+ 
                 const id = document.querySelector('input[name="id"]').value;
                 const name = document.querySelector('input[name="name"]').value;
                 const email = document.querySelector('input[name="email"]').value;
                 const password = document.querySelector('input[name="password"]').value;
-
+ 
                 fetch('http://localhost:8181/profile/update', {
                     method: 'POST',
                     headers: {
@@ -101,23 +101,23 @@
                         alert('Une erreur est survenue lors de la mise à jour du profil');
                     });
             });
-
+ 
             deleteForm.addEventListener('submit', function (event) {
                 event.preventDefault();
-
+ 
                 const id = document.querySelector('input[name="id"]').value;
-
+ 
                 fetch('http://localhost:8181/profile/delete', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
                     },
                     body: JSON.stringify({ id }),
-                })
+                    })
                     .then(response => response.json())
                     .then(data => {
                         alert(data.message);
-                        
+                        // Rediriger ou faire d'autres actions après la suppression du compte
                     })
                     .catch(error => {
                         console.error('Erreur:', error);
@@ -125,6 +125,6 @@
                     });
             });
         });
-    </script>
+</script>
 </body>
 </html>
