--- a/front/web/login.html
+++ b/front/web/login.html
@@ -47,7 +47,7 @@
             })
             .then(data => {
                 if (data.redirectUrl) {
-                    window.location.href = data.redirectUrl; // Redirection après connexion réussie
+                    window.location.href = data.redirectUrl;
                 } else {
                     throw new Error("URL de redirection non définie dans la réponse.");
                 }
